--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -29,10 +29,10 @@ bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 -b 'dunst' 'i3-sensible-editor ~/.config/i3/dunstrc'"
 
 bindsym $mod+Return exec i3-sensible-terminal
-
-bindsym $mod+Shift+q kill
-
 bindsym $mod+d exec dmenu_run
+bindsym $mod+Shift+t exec thunar
+bindsym $mod+Shift+w exec chromium
+bindsym $mod+Shift+m exec thunderbird
 
 bindsym $mod+j focus left
 bindsym $mod+k focus down
@@ -70,13 +70,15 @@ bindsym $mod+space focus mode_toggle
 bindsym $mod+a focus parent
 #bindsym $mod+d focus child
 
+bindsym $mod+Shift+q kill
+
 set $workspace1 "1 "
 set $workspace2 "2 "
 set $workspace3 "3 "
 set $workspace4 "4 "
 set $workspace5 "5 "
 set $workspace6 "6 "
-set $workspace7 "7 "
+set $workspace7 "7 "
 set $workspace8 "8 "
 set $workspace9 "9 "
 set $workspace10 "10 "
@@ -105,51 +107,64 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
-# Floating
 for_window [title="Biblioteca"] floating enable
 
-# Default workspaces
-#assign [class="Firefox"] $workspace1
-#assign [class="^Thunar"] $workspace4
+assign [class="^Chromium"] $workspace1
+assign [class="Firefox"] $workspace1
+assign [class="^Thunar"] $workspace4
+assign [class="^Gimp-2.8"] $workspace5
+assign [class="^Deluge"] $workspace7
+assign [class="^Telegram"] $workspace9
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
-# resize window (you can also use the mouse for that)
+mode "apps" {
+	bindsym c exec --no-startup-id chromium
+	bindsym m exec --no-startup-id thunderbird
+	bindsym p exec --no-startup-id pluma
+	bindsym t exec --no-startup-id thunar
+	bindsym g exec --no-startup-id telegram
+
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
+}
+bindsym $mod+Shift+a mode "apps"
+
 mode "resize" {
-        bindsym j resize shrink width 10 px or 10 ppt
-        bindsym k resize grow height 10 px or 10 ppt
-        bindsym l resize shrink height 10 px or 10 ppt
-        bindsym semicolon resize grow width 10 px or 10 ppt
+	bindsym j resize shrink width 10 px or 10 ppt
+	bindsym k resize grow height 10 px or 10 ppt
+	bindsym l resize shrink height 10 px or 10 ppt
+	bindsym semicolon resize grow width 10 px or 10 ppt
 
-        bindsym Left resize shrink width 10 px or 10 ppt
-        bindsym Down resize grow height 10 px or 10 ppt
-        bindsym Up resize shrink height 10 px or 10 ppt
-        bindsym Right resize grow width 10 px or 10 ppt
+	bindsym Left resize shrink width 10 px or 10 ppt
+	bindsym Down resize grow height 10 px or 10 ppt
+	bindsym Up resize shrink height 10 px or 10 ppt
+	bindsym Right resize grow width 10 px or 10 ppt
 
-        bindsym Return mode "default"
-        bindsym Escape mode "default"
+	bindsym Return mode "default"
+	bindsym Escape mode "default"
 }
 bindsym $mod+r mode "resize"
 
-# startup
-exec_always --no-startup-id feh --bg-fill ~/img/wallpapers/default
+bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
+bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
+
+exec --no-startup-id compton
+exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
-exec --no-startup-id pnmixer
-#exec --no-startup-id yandex-disk start
-#exec --no-startup-id compton
+exec --no-startup-id deluge
 
 bar {
-		status_command i3blocks -c ~/.config/i3/blocks
-		colors {
-			background $bg-color
-			separator #757575
-        #                  border             background         text
-        focused_workspace  $bg-color          $bg-color          $text-color
-        inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-        urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+	status_command i3blocks -c ~/.config/i3/blocks
+	colors {
+		background $bg-color
+		separator #757575
+		#                  border             background         text
+		focused_workspace  $bg-color          $bg-color          $text-color
+		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
+		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
     }
-
 }
