--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -156,6 +156,7 @@ bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
 exec --no-startup-id compton
+exec --no-startup-id pulseaudio --start
 exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
 exec --no-startup-id volwheel
 exec --no-startup-id numlockx
