--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -111,6 +111,9 @@ bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
 for_window [title="Biblioteca"] floating enable
+for_window [class="^mpv"] floating enable
+for_window [class="^Engrampa"] floating enable
+for_window [title="DownThemAll"] floating enable
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
