--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -163,7 +163,7 @@ bindsym $mod+r mode "resize"
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
-exec --no-startup-id compton
+exec --no-startup-id compton -c /etc/compton.conf
 exec --no-startup-id pulseaudio --start
 exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
 exec --no-startup-id numlockx
