--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -36,7 +36,7 @@ bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+d exec dmenu_run
 bindsym $mod+Shift+t exec thunar
-bindsym $mod+Shift+w exec chromium
+bindsym $mod+Shift+w exec chromium --process-per-site
 bindsym $mod+Shift+m exec thunderbird
 
 bindsym $mod+j focus left
@@ -89,7 +89,7 @@ set $workspace6 "6 "
 set $workspace7 "7 "
 set $workspace8 "8 "
 set $workspace9 "9 "
-set $workspace10 "10 "
+set $workspace10 "10 "
 
 # switch to workspace
 bindsym $mod+1 workspace $workspace1
@@ -119,6 +119,7 @@ for_window [title="Biblioteca"] floating enable
 for_window [class="^mpv"] floating enable
 for_window [class="^Engrampa"] floating enable
 for_window [title="DownThemAll"] floating enable
+for_window [class="Tilda"] floating enable; border 1pixel
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
@@ -128,12 +129,13 @@ assign [class="^Gimp-2.8"] $workspace5
 assign [class="^Lxappearance"] $workspace5
 assign [class="^Deluge"] $workspace7
 assign [class="^Telegram"] $workspace9
+assign [class="^Gtkman"] $workspace10
 
 bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 mode "apps" {
-	bindsym c exec --no-startup-id chromium
+	bindsym c exec --no-startup-id chromium --process-per-site
 	bindsym m exec --no-startup-id thunderbird
 	bindsym p exec --no-startup-id pluma
 	bindsym t exec --no-startup-id thunar
@@ -163,13 +165,14 @@ bindsym $mod+r mode "resize"
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
-exec --no-startup-id compton -c /etc/compton.conf
-exec --no-startup-id pulseaudio --start
+#exec --no-startup-id pulseaudio --start
 exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
 exec --no-startup-id deluge
+exec --no-startup-id sudo headsetcontrol 32
+exec --no-startup-id compton -b 
 
 bar {
 	status_command i3blocks -c ~/.config/i3/blocks
