--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -1,5 +1,6 @@
 set $mod Mod4
 font pango:monospace 8
+font xft:Droid Sans Mono, FontAwesome 10
 
 gaps inner 5
 gaps outer 5
@@ -29,9 +30,10 @@ bindsym $mod+Shift+e exec "i3-nagbar -t error -m 'O que deseja fazer?' \
 -b 'Desligar' 'systemctl poweroff'"
 
 bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
--b 'config' 'i3-sensible-editor ~/.config/i3/config' \
--b 'i3blocks' 'i3-sensible-editor ~/.config/i3/blocks' \
--b 'dunst' 'i3-sensible-editor ~/.config/i3/dunstrc'"
+-B 'config' 'i3-sensible-editor ~/.config/i3/config' \
+-B 'i3blocks' 'i3-sensible-editor ~/.config/i3/blocks' \
+-B 'dunst' 'i3-sensible-editor ~/.config/i3/dunstrc' \
+-B 'compton' 'i3-sensible-editor ~/.config/compton.conf'"
 
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+d exec dmenu_run
@@ -165,12 +167,27 @@ bindsym $mod+r mode "resize"
 bindsym --release Caps_Lock exec pkill -SIGRTMIN+11 i3blocks
 bindsym --release Num_Lock  exec pkill -SIGRTMIN+11 i3blocks
 
+# Rate do Cursor
+exec --no-startup-id xset r rate 300 75 &
+
+# Aceleração do mouse
+#"Very Fast"            xset m 7 10 &
+#"Normal(Fast)"         xset m 3 10 &
+#"System Default"		xset m default &
+#"Glacial"              xset m 0 10 &
+#
+# Veloz: 3/1 0
+# Normal: default
+# Glacial: 1/3 0 
+#exec --no-startup-id xset m default &
+
 #exec --no-startup-id pulseaudio --start
 exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
 exec --no-startup-id deluge
+exec --no-startup-id pamac-tray
 exec --no-startup-id sudo headsetcontrol 32
 exec --no-startup-id compton -b 
 
