new file:   etc/mpd.conf 	modified:   home/lucas/.bashrc 	new file:   home/lucas/.config/i3/aihal.dunstrc 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	typechange: home/lucas/.config/i3/dunstrc 	new file:   home/lucas/.config/i3/kaligule.dunstrc 	new file:   home/lucas/.config/i3/luan.dunstrc 	new file:   home/lucas/.config/i3/scotte.dunstrc 	new file:   home/lucas/.config/i3/scripts/focus 	new file:   home/lucas/.config/i3/scripts/mem 	new file:   home/lucas/.config/i3/scripts/mpd 	new file:   home/lucas/.config/i3/scripts/packages 	new file:   home/lucas/.config/i3/scripts/trash 	modified:   home/lucas/.config/i3/scripts/util.sh 	copied:     home/lucas/.config/i3/dunstrc -> home/lucas/.config/i3/sistematico.dunstrc 	new file:   home/lucas/.config/systemd/user/default.target.wants/mpd.service 	new file:   home/lucas/.config/systemd/user/mpd.service 	modified:   home/lucas/.mpd/mpd.conf 	modified:   home/lucas/.xinitrc 	new file:   var/lib/mpd/audio

--- a/home/lucas/.mpd/mpd.conf
+++ b/home/lucas/.mpd/mpd.conf
@@ -1,25 +1,21 @@
-# See: /usr/share/doc/mpd/mpdconf.example
-music_directory     "~/audio/dance"
+music_directory     "~/audio"
 pid_file			"~/.mpd/mpd.pid"
 db_file				"~/.mpd/mpd.db"
 state_file			"~/.mpd/mpd.state"
 playlist_directory	"~/.mpd/playlists/"
 log_file			"~/.mpd/mpd.log"
 auto_update			"yes"
+bind_to_address		"127.0.0.1"
+port				"6600"
 
 audio_output {
-   type        "pulse"
-   name        "Pulse Device"
+	type		"alsa" 
+	name		"ALSA"
+	options		"dev=dmixer"
+	device		"plug:dmix" 
+	format		"44100:16:2" 
+	auto_resample "no"
 }
-
-#audio_output {
-#        type                    "alsa" # Use the ALSA output plugin.
-#	name			"your_custom_name" # Must be present and does not have to match the actual card name , e.g. what you have in /etc/asound.conf
-#        options                 "dev=dmixer"
-#        device                  "plug:dmix" # Both lines cause MPD to output to dmix
-#	format		"44100:16:2" # the actual format
-#	auto_resample		"no" # This bypasses ALSA's own algorithms, which generally are inferior. See below how to choose a different one.
-#}
 
 audio_output {
     type                    "fifo"
