--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -1,9 +1,8 @@
 set $mod Mod4
-#font pango:monospace 8
 font xft:Droid Sans Mono 9, FontAwesome 9
 
-gaps inner 5
-gaps outer 5
+gaps inner 10
+gaps outer 0
 
 hide_edge_borders both
 new_window none
@@ -15,10 +14,11 @@ set $inactive-text-color #676E7D
 set $urgent-bg-color     #E53935
 set $indicator           #00ff00
 
-client.focused          $bg-color            $bg-color          $text-color          $inactive-bg-color
-client.unfocused        $inactive-bg-color   $inactive-bg-color $inactive-text-color $inactive-bg-color
-client.focused_inactive $inactive-bg-color   $inactive-bg-color $inactive-text-color $inactive-bg-color
-client.urgent           $urgent-bg-color     $urgent-bg-color   $text-color          $inactive-bg-color
+client.focused			$bg-color				$bg-color			$text-color				$inactive-bg-color
+client.unfocused		$inactive-bg-color		$inactive-bg-color	$inactive-text-color	$inactive-bg-color
+client.focused_inactive $inactive-bg-color		$inactive-bg-color	$inactive-text-color	$inactive-bg-color
+#client.urgent			$urgent-bg-color		$urgent-bg-color	$text-color				$inactive-bg-color
+client.urgent			$inactive-bg-color		$inactive-bg-color	$urgent-bg-color		$inactive-bg-color
 
 floating_modifier $mod
 
@@ -189,25 +189,24 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-#exec --no-startup-id pulseaudio --start
-exec_always --no-startup-id feh --bg-fill $(shuf -n1 -e ~/img/wallpapers/macos/*)
+exec_always --no-startup-id feh --bg-fill \"$(shuf -n1 -e ~/img/wallpapers/macos/*)\"
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
 exec --no-startup-id deluge
-exec --no-startup-id pamac-tray
+#exec --no-startup-id pamac-tray
 exec --no-startup-id sudo headsetcontrol 32
 exec --no-startup-id compton -b 
 
 bar {
-	#font xft:Droid Sans Mono 8, FontAwesome 10
 	status_command i3blocks -c ~/.config/i3/blocks
 	colors {
 		background $bg-color
 		separator #757575
-		#                  border             background         text
-		focused_workspace  $bg-color          $bg-color          $text-color
-		inactive_workspace $inactive-bg-color $inactive-bg-color $inactive-text-color
-		urgent_workspace   $urgent-bg-color   $urgent-bg-color   $text-color
+		#					border				background			text
+		focused_workspace	$bg-color			$bg-color			$text-color
+		inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
+		#urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
+		urgent_workspace	$inactive-bg-color	$inactive-bg-color	$urgent-bg-color  
     }
 }
