--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -128,6 +128,7 @@ for_window [class="Tilda"] floating enable; border 1pixel
 for_window [title="^DownThemAll"] floating enable
 for_window [title="DownThemAll!$"] move window to scratchpad
 for_window [urgent="latest"] focus
+for_window [class="^Galculator"] floating enable
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
