--- a/home/lucas/.config/compton.conf
+++ b/home/lucas/.config/compton.conf
@@ -109,7 +109,7 @@ shadow-ignore-shaped = false;
 #
 #################################
 
-opacity-rule = [ "80:class_g *= 'Telegram'", "80:class_g *= 'Termite'" ];
+opacity-rule = [ "85:class_g *= 'Telegram'","0:_NET_WM_STATE@:32a *= '_NET_WM_STATE_HIDDEN'" ];
 
 menu-opacity = 1;
 inactive-opacity = 1;
