--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -4,27 +4,71 @@ font xft:Droid Sans Mono 9, FontAwesome 9
 gaps inner 10
 gaps outer 0
 
-hide_edge_borders both
-new_window none
+#hide_edge_borders both
+#new_window none
+new_window pixel 3
 
-set $bg-color            #2f343f
-set $inactive-bg-color   #2f343f
-set $text-color          #f3f4f5
-set $inactive-text-color #676E7D
-set $urgent-bg-color     #E53935
-set $indicator           #00ff00
+#        background #222222
+#        statusline #477AB3 #that neon blue
+#        separator #666666
+							# borda fundo texto
+#        focused_workspace  #477AB3 #477ab3 #ffffff
+#        active_workspace   #477AB3 #477AB3 #ffffff
+#        inactive_workspace #222222 #222222 #888888
+#urgent_workspace #2f343a #900000 #ffffff
 
-client.focused			$bg-color				$bg-color			$text-color				$inactive-bg-color
-client.unfocused		$inactive-bg-color		$inactive-bg-color	$inactive-text-color	$inactive-bg-color
-client.focused_inactive $inactive-bg-color		$inactive-bg-color	$inactive-text-color	$inactive-bg-color
-#client.urgent			$urgent-bg-color		$urgent-bg-color	$text-color				$inactive-bg-color
-client.urgent			$inactive-bg-color		$inactive-bg-color	$urgent-bg-color		$inactive-bg-color
+
+#set $fundo					#2f343f
+#set $fundo-inativo			#2f343f
+#set $texto					#f3f4f5
+#set $texto-inativo	#676E7D
+#set $fundo-urgente			#E53935
+#set $indicador				#00ff00
+
+#set $fundo					#cfcfcf
+#set $fundo-inativo			#1b1b1b
+#set $texto					#f3f4f5
+#set $texto-inativo			#f3f4f5
+#set $texto-inativo	#676E7D
+#set $fundo-urgente			#E53935
+#set $indicador				#00ff00
+#set $separador				#757575
+
+#set $fundo                 #477ab3
+set $fundo                  #1b1b1b
+set $fundo-inativo          #222222
+set $texto                  #ffffff
+set $texto-inativo          #888888
+set $fundo-urgente          #900000
+set $indicador              #00ff00
+set $separador              #666666
+set $borda					#5b6365
+
+# classe				borda				fundo			texto					indicador				borda_filha
+#client.focused			$fundo-inativo		$fundo-inativo	$texto					$fundo-inativo
+#client.unfocused		$fundo-inativo		$fundo-inativo	$texto-inativo	$fundo-inativo
+#client.focused_inactive $fundo-inativo		$fundo-inativo	$texto-inativo	$fundo-inativo
+#client.urgent			$fundo-inativo		$fundo-inativo	$fundo-urgente			$fundo-inativo
+
+# classe                borda               fundo           texto                   indicador               borda_filha
+client.focused          $borda				$fundo-inativo  $texto                  $fundo-inativo
+client.unfocused        $borda				$fundo-inativo  $texto-inativo			$fundo-inativo
+client.focused_inactive $borda				$fundo-inativo  $texto-inativo			$fundo-inativo
+client.urgent           $borda				$fundo-inativo  $fundo-urgente          $fundo-inativo
 
 floating_modifier $mod
 
 bindsym $mod+Shift+x exec i3lock -i ~/img/lock.png
 
 bindsym Print exec ~/bin/screenshot.sh
+
+bindsym F5 exec i3-sensible-terminal
+bindsym F6 exec thunar
+bindsym F7 exec pluma
+bindsym F8 exec firefox
+bindsym F9 exec telegram
+bindsym F11 exec ~/bin/screencast.sh
+bindsym F12 exec ~/bin/screencast.sh -s
 
 bindsym $mod+Shift+e exec "i3-nagbar -t error -m 'O que deseja fazer?' \
 -b 'Sair' 'i3-msg exit' \
@@ -36,7 +80,10 @@ bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 -b 'config' 'i3-sensible-editor ~/.config/i3/config' \
 -b 'i3blocks' 'i3-sensible-editor ~/.config/i3/blocks' \
 -b 'dunst' 'i3-sensible-editor ~/.config/i3/dunstrc' \
--b 'compton' 'i3-sensible-editor ~/.config/compton.conf'"
+-b 'compton' 'i3-sensible-editor ~/.config/compton.conf' \
+-b '.Xresources' 'i3-sensible-editor ~/.Xresources' \
+-b '.xinitrc' 'i3-sensible-editor ~/.config/.xinitrc' \
+-b '.Xdefaults' 'i3-sensible-editor ~/.config/.Xdefaults'"
 
 bindsym $mod+Return exec i3-sensible-terminal
 bindsym $mod+d exec dmenu_run
@@ -129,6 +176,7 @@ for_window [title="^DownThemAll"] floating enable
 for_window [title="DownThemAll!$"] move window to scratchpad
 for_window [urgent="latest"] focus
 for_window [class="^Galculator"] floating enable
+for_window [class="^Pavucontrol"] floating enable
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
@@ -136,7 +184,8 @@ assign [class="Termite"] $workspace2
 assign [class="Pluma"] $workspace3
 assign [class="Sublime_text"] $workspace3
 assign [class="^Thunar"] $workspace4
-assign [class="^Gimp-2.8"] $workspace5
+assign [class="^Gimp"] $workspace5
+assign [class="^Inkscape"] $workspace5
 assign [class="^Lxappearance"] $workspace5
 assign [class="^Deluge"] $workspace7
 assign [class="^Telegram"] $workspace9
@@ -190,24 +239,24 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
-exec_always --no-startup-id feh --bg-fill \"$(shuf -n1 -e ~/img/wallpapers/macos/*)\"
+#exec_always --no-startup-id feh --bg-fill \"$(shuf -n1 -e ~/img/wallpapers/macos/*)\"
+exec_always --no-startup-id hsetroot -solid "#1b1b1b"
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
-exec --no-startup-id deluge
+#exec --no-startup-id deluge
 #exec --no-startup-id pamac-tray
 exec --no-startup-id sudo headsetcontrol 32
-exec --no-startup-id compton -b 
+#exec --no-startup-id compton -b 
 
 bar {
 	status_command i3blocks -c ~/.config/i3/blocks
 	colors {
-		background $bg-color
-		separator #757575
-		#					border				background			text
-		focused_workspace	$bg-color			$bg-color			$text-color
-		inactive_workspace	$inactive-bg-color	$inactive-bg-color	$inactive-text-color
-		#urgent_workspace	$urgent-bg-color	$urgent-bg-color	$text-color
-		urgent_workspace	$inactive-bg-color	$inactive-bg-color	$urgent-bg-color  
+		background	$fundo-inativo
+		separator	$separador
+		#					borda			fundo			texto
+		focused_workspace	$borda			$fundo			$texto
+		inactive_workspace	$fundo-inativo	$fundo-inativo	$texto-inativo
+		urgent_workspace	$fundo-urgente	$fundo-urgente	$texto
     }
 }
