--- a/home/lucas/.config/termite/config
+++ b/home/lucas/.config/termite/config
@@ -1,46 +1,57 @@
 [options]
-#font pango:monospace 8
 font DejaVu Sans Mono 8
-#font = Consolas 10
+resize_grip = false
+scroll_on_output = false
+scroll_on_keystroke = true
+audible_bell = false
+visible_bell = false
+mouse_autohide = false
+allow_bold = true
+dynamic_title = true
+urgent_on_bell = true
+clickable_url = true
+scrollback_lines = 1000
+search_wrap = true
+cursor_blink = system
+cursor_shape = block
+browser = firefox
 
 [colors]
 
 # special
-foreground      = #bac8db
-foreground_bold = #bac8db
-cursor          = #bac8db
-#background      = #0c1117
-#background = rgba(12, 17, 23, 0.5)
-background = rgba(0, 0, 0, 0.5)
+foreground      = #c5c8c6
+foreground_bold = #c5c8c6
+cursor          = #c5c8c6
+background      = #1d1f21
 
 # black
-color0  = #161c24
-color8  = #9fddd7
+color0  = #282a2e
+color8  = #373b41
 
 # red
-color1  = #1d252e
-color9  = #65b6b0
+color1  = #a54242
+color9  = #cc6666
 
 # green
-color2  = #2c3643
-color10 = #74ca64
+color2  = #8c9440
+color10 = #b5bd68
 
 # yellow
-color3  = #404e5e
-color11 = #91c2bd
+color3  = #de935f
+color11 = #f0c674
 
 # blue
-color4  = #596b81
-color12 = #90b9e9
+color4  = #5f819d
+color12 = #81a2be
 
 # magenta
-color5  = #778eab
-color13 = #90e0d9
+color5  = #85678f
+color13 = #b294bb
 
 # cyan
-color6  = #a3b6d0
-color14 = #dec4e1
+color6  = #5e8d87
+color14 = #8abeb7
 
 # white
-color7  = #dde3ed
-color15 = #91d9d3
+color7  = #707880
+color15 = #c5c8c6
