--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -6,7 +6,7 @@ gaps outer 0
 
 #hide_edge_borders both
 #new_window none
-new_window pixel 3
+new_window pixel 2
 
 #        background #222222
 #        statusline #477AB3 #that neon blue
@@ -51,10 +51,10 @@ set $borda					#5b6365
 #client.urgent			$fundo-inativo		$fundo-inativo	$fundo-urgente			$fundo-inativo
 
 # classe                borda               fundo           texto                   indicador               borda_filha
-client.focused          $borda				$fundo-inativo  $texto                  $fundo-inativo
-client.unfocused        $borda				$fundo-inativo  $texto-inativo			$fundo-inativo
-client.focused_inactive $borda				$fundo-inativo  $texto-inativo			$fundo-inativo
-client.urgent           $borda				$fundo-inativo  $fundo-urgente          $fundo-inativo
+client.focused          $borda				$fundo-inativo  $texto                  $borda					$borda
+client.unfocused        $borda				$fundo-inativo  $texto-inativo			$fundo-inativo			$borda
+client.focused_inactive $borda				$fundo-inativo  $texto-inativo			$fundo-inativo			$borda
+client.urgent           $borda				$fundo-inativo  $fundo-urgente          $fundo-inativo			$borda
 
 floating_modifier $mod
 
@@ -62,7 +62,8 @@ bindsym $mod+Shift+x exec i3lock -i ~/img/lock.png
 
 bindsym Print exec ~/bin/screenshot.sh
 
-bindsym F5 exec i3-sensible-terminal
+#bindsym F5 exec i3-sensible-terminal
+bindsym F5 exec app.live termite ~/.config/termite.cfg
 bindsym F6 exec thunar
 bindsym F7 exec pluma
 bindsym F8 exec firefox
@@ -250,6 +251,7 @@ exec --no-startup-id sudo headsetcontrol 32
 #exec --no-startup-id compton -b 
 
 bar {
+	tray_output none	
 	status_command i3blocks -c ~/.config/i3/blocks
 	colors {
 		background	$fundo-inativo
