modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/i3/scripts/cpu_usage 	new file:   home/lucas/.config/i3/scripts/disk 	modified:   home/lucas/.config/i3/scripts/focus 	modified:   home/lucas/.config/i3/scripts/mem 	modified:   home/lucas/.config/i3/scripts/mpd 	modified:   home/lucas/.config/i3/scripts/packages 	modified:   home/lucas/.config/i3/scripts/trash 	modified:   home/lucas/.config/i3/scripts/weather 	modified:   home/lucas/.config/i3/sistematico.dunstrc 	deleted:    home/lucas/.config/systemd/user/default.target.wants/firefox-profile@ewhm30wu.default.service 	deleted:    home/lucas/.config/systemd/user/default.target.wants/mpd.service 	modified:   home/lucas/bin/screenshot.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -178,6 +178,7 @@ for_window [title="DownThemAll!$"] move window to scratchpad
 for_window [urgent="latest"] focus
 for_window [class="^Galculator"] floating enable
 for_window [class="^Pavucontrol"] floating enable
+for_window [class="^Viewnior"] floating enable
 
 assign [class="^Chromium"] $workspace1
 assign [class="Firefox"] $workspace1
@@ -251,7 +252,7 @@ exec --no-startup-id sudo headsetcontrol 32
 #exec --no-startup-id compton -b 
 
 bar {
-	tray_output none	
+	#tray_output none	
 	status_command i3blocks -c ~/.config/i3/blocks
 	colors {
 		background	$fundo-inativo
