new file:   etc/systemd/system/numlock.service 	new file:   etc/systemd/system/rc-local.service 	modified:   home/lucas/.bashrc 	new file:   home/lucas/.config/fish/config.fish 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	new file:   home/lucas/.config/i3/scripts/bandwidth 	new file:   home/lucas/.config/i3/scripts/network 	new file:   home/lucas/.config/i3/scripts/uptime 	modified:   home/lucas/.config/i3/scripts/volume 	new file:   home/lucas/.config/systemd/user/default.target.wants/mpd.service 	modified:   home/lucas/.mpd/mpd.conf 	modified:   home/lucas/.xinitrc

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -252,8 +252,8 @@ exec --no-startup-id sudo headsetcontrol 32
 #exec --no-startup-id compton -b 
 
 bar {
-	#tray_output none	
-	status_command i3blocks -c ~/.config/i3/blocks
+	tray_output none	
+	status_command i3blocks -v -c ~/.config/i3/blocks
 	colors {
 		background	$fundo-inativo
 		separator	$separador
