--- a/home/lucas/.mpd/mpd.conf
+++ b/home/lucas/.mpd/mpd.conf
@@ -8,13 +8,18 @@ auto_update			"yes"
 bind_to_address		"127.0.0.1"
 port				"6600"
 
+#audio_output {
+#	type		"alsa" 
+#	name		"ALSA"
+#	options		"dev=dmixer"
+#	device		"plug:dmix" 
+#	format		"44100:16:2" 
+#	auto_resample "no"
+#}
+
 audio_output {
-	type		"alsa" 
-	name		"ALSA"
-	options		"dev=dmixer"
-	device		"plug:dmix" 
-	format		"44100:16:2" 
-	auto_resample "no"
+	type "pulse"
+	name "Pulse"
 }
 
 audio_output {
