--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -142,6 +142,9 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+for_window [title="^Mail do iCloud - Enc"] floating enable
+for_window [title="Filtros de mensagens"] floating enable
+for_window [title="Preferências do Thunderbird"] floating enable
 for_window [title="Biblioteca"] floating enable
 for_window [class="^mpv"] floating enable
 for_window [class="^Engrampa"] floating enable
@@ -163,6 +166,7 @@ assign [class="^Thunar"] $workspace4
 assign [class="^Gimp"] $workspace5
 assign [class="^Inkscape"] $workspace5
 assign [class="^Lxappearance"] $workspace5
+assign [class="^Steam"] $workspace6
 assign [class="^Deluge"] $workspace7
 assign [class="^Telegram"] $workspace9
 assign [class="^Gtkman"] $workspace10
@@ -171,6 +175,7 @@ bindsym $mod+Shift+c reload
 bindsym $mod+Shift+r restart
 
 mode "apps" {
+	bindsym w exec --no-startup-id hsetroot -solid "#1b1b1b"
 	bindsym c exec --no-startup-id chromium --process-per-site
 	bindsym m exec --no-startup-id thunderbird
 	bindsym p exec --no-startup-id pluma
@@ -226,20 +231,21 @@ exec --no-startup-id xset r rate 300 75 &
 # Glacial: 1/3 0 
 #exec --no-startup-id xset m default &
 
+exec_always --no-startup-id /usr/local/bin/feh_wallpaper.sh 'Jenna Ashley'
 #exec_always --no-startup-id feh --bg-fill \"$(shuf -n1 -e ~/img/wallpapers/macos/*)\"
-exec_always --no-startup-id hsetroot -solid "#1b1b1b"
+#exec_always --no-startup-id hsetroot -solid "#1b1b1b"
 exec --no-startup-id numlockx
 exec --no-startup-id dunst -config ~/.config/i3/dunstrc
 exec --no-startup-id parcellite
-#exec --no-startup-id deluge
+exec --no-startup-id deluge
 #exec --no-startup-id pamac-tray
-exec --no-startup-id sudo headsetcontrol 32
-#exec --no-startup-id compton -b 
+exec --no-startup-id sudo headsetcontrol 64
+exec --no-startup-id compton -b 
 
 bar {
 	font xft:FontAwesome 9
 	tray_output none	
-	status_command i3blocks -v -c ~/.config/i3/blocks
+	status_command i3blocks -v -v -v -c ~/.config/i3/blocks
 	colors {
 		background	$fundo-inativo
 		separator	$separador
