--- a/etc/sysctl.d/90-sysctl.conf
+++ b/etc/sysctl.d/90-sysctl.conf
@@ -1,12 +1,13 @@
 # Contains, as a percentage of total system memory, the number of pages at which
 # a process which is generating disk writes will start writing out dirty data.
 # Default 20
-vm.dirty_ratio=3
+#vm.dirty_ratio=3
+vm.dirty_ratio=2
 
 # Contains, as a percentage of total system memory, the number of pages at which
 # the background kernel flusher threads will start writing out dirty data.
 # Default 10
-vm.dirty_background_ratio=2
+vm.dirty_background_ratio=1
 
 # Small periodic system freezes
 # Set dirty bytes to small enough value (for example 4M):
