--- a/home/lucas/.tmux.conf
+++ b/home/lucas/.tmux.conf
@@ -67,3 +67,5 @@ send-keys -t:9 'man tmux' C-m
 
 # Troca o índice de 0 pra 1
 select-window -t 1
+
+source "/usr/lib/python3.6/site-packages/powerline/bindings/tmux/powerline.conf"
