new file:   etc/netctl/hooks/10-disconnect.sh 	new file:   etc/rc.local 	new file:   etc/udev/rules.d/70-wifi-powersave.rules 	modified:   home/lucas/.config/i3/blocks 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/scripts/bandwidth 	new file:   home/lucas/.config/i3/scripts/bandwidth2 	modified:   home/lucas/.config/i3/scripts/disk 	modified:   home/lucas/.config/i3/scripts/focus 	new file:   home/lucas/.config/i3/scripts/wifi 	new file:   home/lucas/.config/systemd/user/default.target.wants/mpd.service 	deleted:    home/lucas/.config/systemd/user/graphical.target.wants/xautolock.service 	modified:   home/lucas/.config/systemd/user/xautolock.service 	new file:   home/lucas/.mpd/playlists/Sertanejo.m3u 	modified:   home/lucas/.xinitrc 	modified:   home/lucas/.zshrc 	modified:   home/lucas/bin/screenshot.sh 	new file:   usr/local/bin/xautolock.sh 	new file:   usr/local/sbin/wireless.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -27,17 +27,34 @@ client.urgent           $borda				$fundo-inativo  $fundo-urgente          $fundo
 
 floating_modifier $mod
 
+#bindsym $mod+d exec dmenu_run
+#bindsym $mod+d exec rofi -show run -modi run -location 1 -width 100 \
+#		 -lines 2 -line-margin 0 -line-padding 1 \
+#		 -separator-style none -font "mono 10" -columns 9 -bw 0 \
+#		 -disable-history \
+#		 -hide-scrollbar \
+#		 -color-window "#222222, #222222, #b1b4b3" \
+#		 -color-normal "#222222, #b1b4b3, #222222, #005577, #b1b4b3" \
+#		 -color-active "#222222, #b1b4b3, #222222, #007763, #b1b4b3" \
+#		 -color-urgent "#222222, #b1b4b3, #222222, #77003d, #b1b4b3" \
+#		 -kb-row-select "Tab" -kb-row-tab ""
+#bindsym $mod+d exec rofi -show combi -modi combi -combi-modi run,fm:fm.sh
+bindsym $mod+d exec rofi -show run -fullscreen -fake-transparency -fake-background ~/img/apple/yosemite.png
+bindsym $mod+Shift+d exec rofi -show fm -fullscreen -fake-transparency -fake-background ~/img/apple/yosemite.png
+bindsym $mod+Control+d exec rofi -show keys
+
 #bindsym $mod+Shift+x exec i3lock -i ~/img/lock.png
 bindsym $mod+Shift+x exec i3lock-fancy -f Iosevka-Thin -t "Tela Bloqueada" -p -- scrot -z
 
 bindsym Print exec ~/bin/screenshot.sh
+bindsym --release $mod+Print exec scrot -s | xargs -a xclip -selection c -t image/png -i
 
 #bindsym F5 exec i3-sensible-terminal
 bindsym F5 exec termite
 bindsym F6 exec thunar
 bindsym F7 exec pluma
 bindsym F8 exec firefox
-bindsym F9 exec telegram
+bindsym F9 exec telegram-desktop
 bindsym F11 exec ~/bin/screencast.sh
 bindsym F12 exec ~/bin/screencast.sh -s
 
@@ -45,7 +62,7 @@ bindsym XF86AudioRaiseVolume exec amixer -q -D pulse sset Master 1%+ unmute
 bindsym XF86AudioLowerVolume exec amixer -q -D pulse sset Master 1%- unmute 
 
 #bindsym $mod+Shift+e exec "i3-nagbar -t error -m 'O que deseja fazer?' \
-#-b 'Sair' 'i3-msg exit' \
+#-b 'Sair' 'exec i3-msg exit' \
 #-b 'Suspender' 'systemctl suspend' \
 #-b 'Reiniciar' 'systemctl reboot' \
 #-b 'Desligar' 'systemctl poweroff'"
@@ -60,7 +77,6 @@ bindsym $mod+c exec "i3-nagbar -t warning -m 'Editar arquivos do i3' \
 -b '.Xdefaults' 'i3-sensible-editor ~/.config/.Xdefaults'"
 
 bindsym $mod+Return exec i3-sensible-terminal
-bindsym $mod+d exec dmenu_run
 bindsym $mod+Shift+t exec thunar
 bindsym $mod+Shift+w exec firefox
 bindsym $mod+Shift+m exec thunderbird
@@ -142,6 +158,8 @@ bindsym $mod+Shift+8 move container to workspace $workspace8
 bindsym $mod+Shift+9 move container to workspace $workspace9
 bindsym $mod+Shift+0 move container to workspace $workspace10
 
+for_window [class="^Skype"] floating enable
+for_window [title="^Governo do Estado de Mato Grosso do Sul"] floating enable
 for_window [title="^Mail do iCloud - Enc"] floating enable
 for_window [title="Filtros de mensagens"] floating enable
 for_window [title="Preferências do Thunderbird"] floating enable
@@ -180,7 +198,7 @@ mode "apps" {
 	bindsym m exec --no-startup-id thunderbird
 	bindsym p exec --no-startup-id pluma
 	bindsym t exec --no-startup-id thunar
-	bindsym g exec --no-startup-id telegram
+	bindsym g exec --no-startup-id telegram-desktop
 
 	bindsym Return mode "default"
 	bindsym Escape mode "default"
@@ -188,7 +206,7 @@ mode "apps" {
 bindsym $mod+Shift+a mode "apps"
 
 mode "[s]air, [d]esligar, [r]einiciar, s[u]spender" {
-	bindsym s i3-msg exit
+	bindsym s exec i3-msg exit
 	bindsym u exec systemctl suspend
 	bindsym r exec systemctl reboot
 	bindsym d exec systemctl poweroff
@@ -241,11 +259,13 @@ exec --no-startup-id parcellite
 #exec --no-startup-id pamac-tray
 exec --no-startup-id sudo headsetcontrol 64
 exec --no-startup-id compton -b 
+exec --no-startup-id /usr/local/bin/xautolock.sh
 
 bar {
 	font xft:FontAwesome 9
 	tray_output none	
-	status_command i3blocks -v -v -v -c ~/.config/i3/blocks
+	#status_command i3blocks -v -v -v -c ~/.config/i3/blocks
+	status_command i3blocks -c ~/.config/i3/blocks
 	colors {
 		background	$fundo-inativo
 		separator	$separador
