modified:   home/lucas/.config/compton.conf 	modified:   home/lucas/.config/i3/config 	modified:   home/lucas/.config/i3/scripts/blank 	modified:   home/lucas/.config/rofi/config 	new file:   home/lucas/.config/rofi/scripts/finder.sh 	renamed:    home/lucas/bin/hextorgba.sh -> home/lucas/bin/hextorgb.sh

--- a/home/lucas/.config/i3/config
+++ b/home/lucas/.config/i3/config
@@ -42,6 +42,7 @@ floating_modifier $mod
 #		 -kb-row-select "Tab" -kb-row-tab ""
 #bindsym $mod+d exec rofi -show combi -modi combi -combi-modi run,fm:fm.sh
 bindsym $mod+d exec rofi -show run -fullscreen -fake-transparency -fake-background ~/img/apple/yosemite.png
+bindsym $mod+Shift+f exec rofi -show find -modi find:~/.config/rofi/scripts/finder.sh
 bindsym $mod+Shift+d exec rofi -show fm -fullscreen -fake-transparency -fake-background ~/img/apple/yosemite.png
 bindsym $mod+Control+d exec rofi -show keys
 
